--- a/CleanArchMvc.IoC/CleanArchMvc.Infra.IoC.csproj
+++ b/CleanArchMvc.IoC/CleanArchMvc.Infra.IoC.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CleanArchMvc.Aplication\CleanArchMvc.Application.csproj" />
     <ProjectReference Include="..\CleanArchMvc.Domain\CleanArchMvc.Domain.csproj" />
+    <ProjectReference Include="..\CleanArchMvc.Infra.Data\CleanArchMvc.Infra.Data.csproj" />
   </ItemGroup>
 
 </Project>
